# ai-voice-phone-call-out-job-interview

./: .gitignore  COMPLETION_GUIDE.md  DEPLOYMENT_GUIDE.md  assessments_index.json  bartender_analysis.json  core_test.json  experience_3_transcript.json  final_test.json  init-new-project.sh  llm_comparison_complete_results.json  package-lock.json  package.json  payload.b64  project.config.ts  pyproject.toml  requirements.txt  response.json  sst-env.d.ts  sst.config.ts  sst.pyi  success_test.json  test_final.json  test_payload.json  test_response.json  test_response_v2.json  tsconfig.json  twilio_webhook_setup_guide.txt  victory_test.json
.archive/: state.mdc
.cursor/: cursorignore
.devcontainer/: Dockerfile  docker-compose.yml  post-create.sh
.docs/: GravyWork- AI Accelerator - Workshop 2 Tab.csv  GravyWork- AI Accelerator - Workshop 3.csv  GravyWork- AI Accelerator - Workshop Framework.csv  Roles and Questions.rtf  Roles.md  audio_scripts.json  definitive_audio_recording_template.json
.memory-bank/: activeContext.md  critical-fixes-sept2025.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
functions/: __init__.py  assessment_processor.py  pyproject.toml  sst.pyi
functions/src/config/: llm_config.py  twilio_config.py
functions/src/data/: assessment_templates.json
functions/src/examples/: official_twilio_comparison.py
functions/src/functions/: __init__.py  assessment_processor_simple.py  bedrock_service.py  llm_comparison_processor.py  twilio_service.py  webhook.py  webhook_simple.py
functions/src/handlers/: index.py
web/: app.js  (+5 more)
(+67 files in other folders)
