[project]
name = "functions"
version = "0.1.0"
description = "PDF Processing Lambda Function"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.13",
    "botocore>=1.40.13",
    "amazon-textract-prettyprinter>=0.1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
